# gps-kalman-filter

./: .gitignore  .pre-commit-config.yaml  ExtendedKalmanFilter.m  ExtendedKalmanFilterNoMeas.m  NonLinearLeastSquares.m  README.md  h_func.m  main.m  main.py  pyproject.toml  test_funcs.m  test_structured_api.py  tune_ekf.py
data/: GPSdata.mat
gps/: cli.py
gps/data/: loader.py
gps/filters/: ekf.py  nl_ls.py
gps/utils/: measurement_functions.py
gps_kalman_filter/: __init__.py  cli.py
gps_kalman_filter/filters/: ekf.py  nl_ls.py
matlab_old/: NonLinearLeastSquares.m  h_func.m  h_prime_func.m  main.m
matlab_old/plots/: ekf_traj_2D.eps  ekf_traj_3D.eps  nl_estimator_traj_2D.eps
matlab_old/tikzfiles/: ekf_traj_3D.tex  nl_estimator_traj_3D.tex  plot_tikz.tex
package/: __init__.py  data_loader.py  extended_kalman_filter.py  measurement_functions.py  nonlinear_least_squares.py
plots/: ekf_traj_2D.eps  ekf_traj_2D_color.eps  ekf_traj_3D.eps  finalerrors.eps  gcf4.eps  gcf5.eps  gcf6.eps  gcf7.eps  nl_estimator_traj_2D.eps  nl_estimator_traj_3D.eps  no_meas.eps  sat_count.eps  test.eps  tests
plots/iii/: covariances.eps  errors.eps  states.eps
plots/kf/: 2d.eps  x_estimate.eps
tests/: __init__.py  conftest.py
tests/data/: test_loader.py
tests/filters/: test_ekf.py  test_nl_ls.py
tikzfiles/: ekf_traj_2D.tex  ekf_traj_3D.tex  gcf4.tex  gcf5.tex  gcf6.tex  gcf7.tex  nl_estimator_traj_2D.tex  nl_estimator_traj_3D.tex
