[project]
name = "gps-kalman-filter"
version = "0.1.0"
description = "GPS position estimation using Kalman filtering techniques"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Alexander Berndt"},
    {name = "Rebecka Winqvist"},
]
dependencies = [
    "numpy>=2.4.0",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.8",
]
dev = [
    "pytest>=8.0.0",
    "matplotlib>=3.10.8",
]

[project.scripts]
gps-kalman-filter = "gps_kalman_filter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gps_kalman_filter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
]
