[project]
name = "gps"
version = "0.1.0"
description = "GPS position estimation using Kalman filtering techniques"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Alex Berndt"},
    {name = "Rebecka Winqvist"},
]
dependencies = [
    "bokeh>=3.8.1",
    "numpy>=2.4.0",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
